# prod-demo

./: .gitignore  Dockerfile  README.md  deployment.yaml  pyproject.toml  service.yaml  streamlit.Dockerfile  ui-deployment.yaml  ui-service.yaml
.github/workflows/: build_docker.yml  test.yml
src/prod_demo/: main.py  ui.py
tests/: test_simple.py
